--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gdax-sim-test-data",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Test data to be used for unit testing the gdax-sim and other such software.",
-  "main": "TestData,js",
+  "main": "TestData.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
